--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link href="myStyle.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <title>Assignment 1</title>
   </head>
   <body>
