Add about html to it

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <html>
   <head>
-    <link href="myStyle.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <title>Assignment 1</title>
   </head>
   <body>
     <div>
-      <nav class="nva-container">
+      <nav class="nav-container">
         <ul class="nav nav-tabs">
           <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
+              <a class="nav-link active" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
         </ul>
       </nav>
@@ -29,7 +29,7 @@
       <div class="action-container">
         <input class="btn btn-outline-secondary" type="button" value="Show" onclick="showList();">
         <input class="btn btn-outline-secondary" type="button" value="Hide" onclick="hideList();">
-        <input class="btn btn-outline-secondary" type="button" value="Destroy ALl" onclick="destroyAll();">
+        <input class="btn btn-outline-secondary" type="button" value="Destroy All" onclick="destroyAll();">
       </div>
       <div id="message-list-container">
         <ul id='messagesList' class="list-group">
