Initilize message at the beginning

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <input class="btn btn-outline-secondary" type="button" value="Destroy All" onclick="destroyAll();">
       </div>
       <div id="message-list-container">
+        <ul id='initialMessage' class="list-group">
+        </ul>
         <ul id='messagesList' class="list-group">
         </ul>
       </div>
